<resources>
    <string name="app_name">Noto</string>
    <string name="create_sample_data">Créer des exemples de données</string>
    <string name="delete_all_notes">Supprimer toutes les notes</string>
    <string name="are_you_sure">Êtes-vous sûr?</string>
    <string name="all_deleted">Toutes les notes supprimées</string>
    <string name="title_activity_editor">Éditeur</string>

    <string name="hello_world">Bonjour le monde !</string>
    <string name="action_settings">Settings</string>
    <string name="new_note">Nouvelle note</string>
    <string name="note_updated">Note mise à jour</string>
    <string name="note_inserted">Note ajoutée</string>
    <string name="action_delete">Effacer</string>
    <string name="action_save">Enregistrer</string>
    <string name="note_deleted">Note supprimée</string>
    <string name="note">Note</string>
    <string name="enter_note_here">Entrez note ici</string>
    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="delete_dialog_msg">Voulez-vous supprimer ?</string>
    <string name="save_dialog_msg">Voulez-vous enregistrer ?</string>
    <string name="edit_dialog_msg">Voulez-vous modifier ?</string>
    <string name="note_info">Information</string>
    <string name="tag_field">Mot clé</string>



    <string name="search_result">Résultat de la recherche !</string>
    <string name="search_hint">Taper et rechercher</string>
    <string name="menu_search">Recherche</string>

    <string name="no_note_alert">Il n"y a pas de note</string>

    <string name="search_alertBegin">Votre recherche - </string>
    <string name="search_alert1End"> - ne correspond à aucun note</string>

</resources>
