<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <!--<item-->
        <!--android:id="@+id/action_create_sample"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/create_sample_data"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/delete_all_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"/>

</menu>
